@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/vmware.eclass,v 1.10 2006/10/02 15:52:58 wolf31o2 Exp $
+# $Header: $
 
 # This eclass is for all vmware-* ebuilds in the tree and should contain all
 # of the common components across the multiple packages.
@@ -283,7 +283,7 @@ vmware_src_install() {
 
 	if [ "${product}" == "vmware" -o "${product}" == "vmware-tools" ]
 	then
-	
+
 		# We have to create a bunch of rc directories for the init script
 		vmware_create_initd || die "creating rc directories"
 
